# django-wechat

./: .gitignore  README.md  pyproject.toml  setup.py
django_wechat/: apps.py  models.py  urls.py  views.py
django_wechat/cloudrun/: api.py  middlewares.py  settings.py
django_wechat/login/: api.py  apps.py
django_wechat/sdk/: login.py  official_accounts.py  pay.py  work.py
django_wechat/templatetags/: wechat_login.py  wechatpay.py  wechatwork.py
django_wechat/tests/: test_sdk_pay.py  test_sdk_work.py
django_wechat_login/: api.py  apps.py  settings.py
django_wxcloudrun/: storages.py
tests/: test_sdk_pay.py  test_sdk_work.py  test_templatetags.py
