[build-system]
requires = ["setuptools>=61", "setuptools.scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django-wechat"
authors = [{name = "QuantTide Inc.", email = "opensource@quanttide.com"}]
version = "0.1.0-alpha.1"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = '>=3'
dependencies = [
    "django",
]
# dynamic = ["version"]

[project.license]
file = "LICENSE"

[project.readme]
file = "README.md"
content-type = "text/markdown"